force-app/main/default/objects/Fortnite_API_Cache__c/Fortnite_API_Cache__c.object-meta.xml
<CustomObject>
    <label>Fortnite API Cache</label>
    <nameField>
        <label>Fortnite API Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortnite API Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>