force-app/main/default/objects/Fortnite_API_Cache__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <label>body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>