force-app/main/default/objects/Fortnite_API_Cache__c/fields/Cache_Key__c.field-meta.xml
<CustomField>
    <fullName>Cache_Key__c</fullName>
    <description>A key created by the app to allow for refresh, etc.</description>
    <label>Cache Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>