force-app/main/default/objects/Fortnite_API_Cache__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of cached data (player, store, etc.)</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>