force-app/main/default/objects/Fortnite_API_Cache__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cache_Key__c</columns>
    <columns>Type__c</columns>
    <columns>body__c</columns>
    <columns>url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>